@@ -1,17 +1,20 @@
 /*
- * Copyright (C) 2020 Xiaomi Corporation
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.ozhera.log.agent.channel;
 
@@ -23,6 +26,14 @@ import com.xiaomi.data.push.common.SafeRun;
 import com.xiaomi.data.push.rpc.RpcClient;
 import com.xiaomi.data.push.rpc.protocol.RemotingCommand;
 import com.xiaomi.mone.file.ILogFile;
+import com.xiaomi.youpin.docean.Ioc;
+import com.xiaomi.youpin.docean.anno.Lookup;
+import com.xiaomi.youpin.docean.anno.Service;
+import com.xiaomi.youpin.docean.plugin.config.Config;
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.ozhera.log.agent.channel.comparator.*;
 import org.apache.ozhera.log.agent.channel.listener.DefaultFileMonitorListener;
 import org.apache.ozhera.log.agent.channel.listener.FileMonitorListener;
@@ -39,18 +50,12 @@ import org.apache.ozhera.log.agent.input.Input;
 import org.apache.ozhera.log.agent.output.Output;
 import org.apache.ozhera.log.api.enums.LogTypeEnum;
 import org.apache.ozhera.log.api.enums.OperateEnum;
+import org.apache.ozhera.log.api.model.meta.NodeCollInfo;
 import org.apache.ozhera.log.api.model.vo.UpdateLogProcessCmd;
 import org.apache.ozhera.log.common.Constant;
 import org.apache.ozhera.log.utils.NetUtil;
-import com.xiaomi.youpin.docean.Ioc;
-import com.xiaomi.youpin.docean.anno.Lookup;
-import com.xiaomi.youpin.docean.anno.Service;
-import com.xiaomi.youpin.docean.plugin.config.Config;
-import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
 
+import java.io.InputStream;
 import java.text.NumberFormat;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
@@ -60,8 +65,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import static org.apache.ozhera.log.common.Constant.GSON;
-import static org.apache.ozhera.log.common.PathUtils.PATH_WILDCARD;
-import static org.apache.ozhera.log.common.PathUtils.SEPARATOR;
 
 /**
  * @author shanwb
@@ -83,6 +86,8 @@ public class ChannelEngine {
      * File listener
      */
     private FileMonitorListener fileMonitorListener;
+
+    private ChannelServiceFactory channelServiceFactory;
 
     private String memoryBasePath;
 
@@ -108,6 +113,8 @@ public class ChannelEngine {
             log.info("current agent all config meta:{}", gson.toJson(channelDefineList));
             agentMemoryService = new AgentMemoryServiceImpl(memoryBasePath);
             fileMonitorListener = new DefaultFileMonitorListener();
+
+            channelServiceFactory = new ChannelServiceFactory(agentMemoryService, memoryBasePath);
 
             log.info("query channelDefineList:{}", gson.toJson(channelDefineList));
             channelServiceList = channelDefineList.stream()
@@ -211,7 +218,7 @@ public class ChannelEngine {
             log.info("realChannelService,id:{}", channelId);
             try {
                 channelService.start();
-                fileMonitorListener.addChannelService(channelService);
+                fileMonitorListener.addChannelService(abstractChannelService);
                 successChannelIds.add(channelId);
             } catch (RejectedExecutionException e) {
                 log.error("The thread pool is full.id:{}", channelId, e);
@@ -253,7 +260,7 @@ public class ChannelEngine {
         try {
             preCheckChannelDefine(channelDefine);
             Output output = channelDefine.getOutput();
-            MsgExporter exporter = exporterTrans(output);
+            MsgExporter exporter = exporterTrans(output, channelDefine.getInput());
             if (null == exporter) {
                 throw new IllegalArgumentException("cant not trans to MsgExporter, output:" + gson.toJson(output));
             }
@@ -263,17 +270,9 @@ public class ChannelEngine {
             if (null == agentMemoryService) {
                 agentMemoryService = new AgentMemoryServiceImpl(org.apache.ozhera.log.common.Config.ins().get("agent.memory.path", AgentMemoryService.DEFAULT_BASE_PATH));
             }
-            ChannelService channelService;
-            Input input = channelDefine.getInput();
-            boolean matchWildcard = Arrays.stream(input.getLogPattern().split(",")).anyMatch(data -> StringUtils.substringAfterLast(data, SEPARATOR).contains(PATH_WILDCARD));
-            if (matchWildcard) {
-                channelService = new WildcardChannelServiceImpl(exporter, agentMemoryService, channelDefine, filterChain, memoryBasePath);
-            } else {
-                channelService = new ChannelServiceImpl(exporter, agentMemoryService, channelDefine, filterChain);
-            }
-            return channelService;
+            return channelServiceFactory.createChannelService(channelDefine, exporter, filterChain);
         } catch (Throwable e) {
-            log.error("channelServiceTrans exception, channelDefine:{}, exception:{}", gson.toJson(channelDefine), e);
+            log.error("channelServiceTrans exception, channelDefine:{}", gson.toJson(channelDefine), e);
         }
         return null;
     }
@@ -296,11 +295,11 @@ public class ChannelEngine {
         OutPutServiceFactory.getOutPutService(output.getServiceName()).preCheckOutput(output);
     }
 
-    private MsgExporter exporterTrans(Output output) throws Exception {
+    private MsgExporter exporterTrans(Output output, Input input) throws Exception {
         if (null == output) {
             return null;
         }
-        return OutPutServiceFactory.getOutPutService(output.getServiceName()).exporterTrans(output);
+        return OutPutServiceFactory.getOutPutService(output.getServiceName()).exporterTrans(output, input);
     }
 
 
@@ -346,6 +345,63 @@ public class ChannelEngine {
         } catch (Exception e) {
             log.error("refresh error,[config change],changed data:{},origin data:{}", gson.toJson(channelDefines), gson.toJson(channelDefineList), e);
         }
+    }
+
+    private String getHostName() {
+        try {
+            Process process = Runtime.getRuntime().exec("hostname");
+            try (InputStream in = process.getInputStream()) {
+                return new String(in.readAllBytes()).trim();
+            }
+        } catch (Exception e) {
+            log.error("get hostname error", e);
+        }
+        return "unknown";
+    }
+
+    public NodeCollInfo getNodeCollInfo() {
+        NodeCollInfo machineCollInfo = new NodeCollInfo();
+        machineCollInfo.setHostIp(NetUtil.getLocalIp());
+
+        machineCollInfo.setHostName(getHostName());
+
+        List<NodeCollInfo.TailCollInfo> tailCollInfos = channelServiceList.stream()
+                .map(this::buildTailCollInfo)
+                .collect(Collectors.toList());
+
+        machineCollInfo.setTailCollInfos(tailCollInfos);
+        return machineCollInfo;
+    }
+
+    private NodeCollInfo.TailCollInfo buildTailCollInfo(ChannelService channelService) {
+        ChannelState channelState = channelService.state();
+
+        NodeCollInfo.TailCollInfo tailCollInfo = new NodeCollInfo.TailCollInfo();
+        tailCollInfo.setTailId(channelState.getTailId());
+        tailCollInfo.setTailName(channelState.getTailName());
+
+        List<NodeCollInfo.CollInfo> collInfos = channelState.getStateProgressMap().entrySet().stream()
+                .map(this::buildCollInfo)
+                .collect(Collectors.toList());
+
+        tailCollInfo.setCollInfos(collInfos);
+        return tailCollInfo;
+    }
+
+    private NodeCollInfo.CollInfo buildCollInfo(Map.Entry<String, ChannelState.StateProgress> entry) {
+        String fileName = entry.getKey();
+        ChannelState.StateProgress stateProgress = entry.getValue();
+
+        NodeCollInfo.CollInfo collInfo = new NodeCollInfo.CollInfo();
+        collInfo.setFileName(fileName);
+        collInfo.setFileNode(stateProgress.getFileInode());
+        collInfo.setCollProgress(getPercent(stateProgress.getPointer(), stateProgress.getFileMaxPointer()));
+        collInfo.setMaxPointer(stateProgress.getFileMaxPointer());
+        collInfo.setCurrentPointer(stateProgress.getPointer());
+        collInfo.setCurrentNumber(stateProgress.getCurrentRowNum());
+        collInfo.setCollTime(stateProgress.getCtTime());
+
+        return collInfo;
     }
 
     /**
@@ -395,7 +451,8 @@ public class ChannelEngine {
                     SimilarComparator inputSimilarComparator = new InputSimilarComparator(oldChannelDefine.getInput());
                     SimilarComparator outputSimilarComparator = new OutputSimilarComparator(oldChannelDefine.getOutput());
                     FilterSimilarComparator filterSimilarComparator = new FilterSimilarComparator(oldChannelDefine.getFilters());
-                    if (appSimilarComparator.compare(newChannelDefine.getAppId()) && inputSimilarComparator.compare(newChannelDefine.getInput()) && outputSimilarComparator.compare(newChannelDefine.getOutput())) {
+                    SimilarComparator logLevelSimilarComparator = new LogLevelSimilarComparator(oldChannelDefine.getFilterLogLevelList());
+                    if (appSimilarComparator.compare(newChannelDefine.getAppId()) && inputSimilarComparator.compare(newChannelDefine.getInput()) && outputSimilarComparator.compare(newChannelDefine.getOutput()) && logLevelSimilarComparator.compare(newChannelDefine.getFilterLogLevelList())) {
                         if (!filterSimilarComparator.compare(newChannelDefine.getFilters())) {
                             channelServiceList.stream().filter(channelService -> ((AbstractChannelService) channelService).getChannelDefine().getChannelId().equals(channelId)).findFirst().ifPresent(channelService -> channelService.filterRefresh(newChannelDefine.getFilters()));
                         }
@@ -431,14 +488,15 @@ public class ChannelEngine {
         try {
             if (directDel || CollectionUtils.isNotEmpty(channelDels)) {
                 log.info("[delete config]data:{}", gson.toJson(channelDels));
-                List<Long> channelIdDels = channelDels.stream().map(ChannelDefine::getChannelId).collect(Collectors.toList());
+                List<Long> channelIdDels = channelDels.stream().map(ChannelDefine::getChannelId).toList();
                 List<ChannelService> tempChannelServiceList = Lists.newArrayList();
                 channelServiceList.forEach(channelService -> {
-                    Long channelId = ((AbstractChannelService) channelService).getChannelDefine().getChannelId();
+                    AbstractChannelService abstractChannelService = (AbstractChannelService) channelService;
+                    Long channelId = abstractChannelService.getChannelDefine().getChannelId();
                     if (channelIdDels.contains(channelId)) {
                         log.info("[delete config]channelService:{}", channelId);
                         channelService.close();
-                        fileMonitorListener.removeChannelService(channelService);
+                        fileMonitorListener.removeChannelService(abstractChannelService);
                         tempChannelServiceList.add(channelService);
                         this.channelDefineList.removeIf(channelDefine -> {
                             if (channelDefine.getChannelId().equals(channelId)) {
