@@ -1,20 +1,24 @@
 /*
- * Copyright (C) 2020 Xiaomi Corporation
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
  *
- *  Licensed under the Apache License, Version 2.0 (the "License");
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
  */
 package org.apache.ozhera.log.agent.channel;
 
+import cn.hutool.system.SystemUtil;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.xiaomi.data.push.common.SafeRun;
@@ -25,6 +29,9 @@ import com.xiaomi.mone.file.common.FileInfo;
 import com.xiaomi.mone.file.common.FileInfoCache;
 import com.xiaomi.mone.file.listener.DefaultMonitorListener;
 import com.xiaomi.mone.file.ozhera.HeraFileMonitor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.ozhera.log.agent.channel.file.MonitorFile;
 import org.apache.ozhera.log.agent.channel.memory.AgentMemoryService;
 import org.apache.ozhera.log.agent.channel.memory.ChannelMemory;
@@ -36,10 +43,8 @@ import org.apache.ozhera.log.agent.input.Input;
 import org.apache.ozhera.log.api.enums.LogTypeEnum;
 import org.apache.ozhera.log.api.model.meta.FilterConf;
 import org.apache.ozhera.log.api.model.msg.LineMessage;
+import org.apache.ozhera.log.common.Config;
 import org.apache.ozhera.log.common.PathUtils;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.lang3.StringUtils;
 
 import java.io.File;
 import java.io.IOException;
@@ -102,6 +107,8 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
 
     private DefaultMonitorListener defaultMonitorListener;
 
+    private HeraFileMonitor fileMonitor;
+
 
     public WildcardChannelServiceImpl(MsgExporter msgExporter, AgentMemoryService memoryService,
                                       ChannelDefine channelDefine, FilterChain chain, String memoryBasePath) {
@@ -143,7 +150,7 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
             String restartFile = buildRestartFilePath();
             FileInfoCache.ins().load(restartFile);
 
-            HeraFileMonitor monitor = createFileMonitor(input.getPatternCode(), ip);
+            fileMonitor = createFileMonitor(input.getPatternCode(), ip);
 
             String fileExpression = buildFileExpression(input.getLogPattern());
 
@@ -157,7 +164,7 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
             // Compile the file expression pattern
             Pattern pattern = Pattern.compile(fileExpression);
             for (String monitorPath : monitorPaths) {
-                fileCollFutures.add(ExecutorUtil.submit(() -> monitorFileChanges(monitor, monitorPath, pattern)));
+                fileCollFutures.add(ExecutorUtil.submit(() -> monitorFileChanges(fileMonitor, monitorPath, pattern)));
             }
         } catch (Exception e) {
             log.error("startCollectFile error, channelId: {}, input: {}, ip: {}", channelId, GSON.toJson(input), ip, e);
@@ -215,7 +222,7 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
                 .distinct()
                 .toList();
         return expressions.size() == 1 ?
-                expressions.get(0) :
+                expressions.getFirst() :
                 expressions.stream().collect(Collectors.joining("|", MULTI_FILE_PREFIX, MULTI_FILE_SUFFIX));
     }
 
@@ -223,6 +230,9 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
         try {
             log.info("monitorFileChanges,directory:{}", monitorPath);
             monitor.reg(monitorPath, filePath -> {
+                if (SystemUtil.getOsInfo().isWindows()) {
+                    return true;
+                }
                 boolean matches = pattern.matcher(filePath).matches();
                 log.debug("file: {}, matches: {}", filePath, matches);
                 return matches;
@@ -280,7 +290,7 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
         ReadResult result = readResult.get();
 
         LogTypeEnum logTypeEnum = getLogTypeEnum();
-        result.getLines().forEach(line -> {
+        result.getLines().stream().filter(line -> !shouldFilterLogs(channelDefine.getFilterLogLevelList(), line)).forEach(line -> {
             if (LogTypeEnum.APP_LOG_MULTI == logTypeEnum || LogTypeEnum.OPENTELEMETRY == logTypeEnum) {
                 line = mLog.append2(line);
             }
@@ -441,6 +451,7 @@ public class WildcardChannelServiceImpl extends AbstractChannelService {
 
     @Override
     public void close() {
+        fileMonitor.stop();
         log.info("Delete the current collection task,channelId:{}", channelDefine.getChannelId());
         //2. stop exporting
         this.msgExporter.close();
